--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "ts-node-esm src/server.ts",
+    "dev": "ts-node --esm src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
