--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,11 +3,11 @@
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "outDir": "dist",
-    "rootDir": "src",
-    "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "strict": true
+  },
+  "include": ["src"]
 }
