--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,18 @@
 {
-  "name": "orbix-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "type": "module",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "npm run build && node dist/server.js",
     "build": "tsc",
+    "dev": "npm run build && node dist/server.js",
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "express": "^4.19.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/morgan": "^1.9.5",
-    "@types/node": "^20.11.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.4.0",
+    "@types/node": "^20.0.0",
+    "@types/express": "^4.17.21"
   }
 }
